# ros_imu

./: CMakeLists.txt  README
backup/imu_human_under/: package.xml
backup/imu_node/: package.xml
backup/imu_node/other/: jake_imu_node_single.cpp  legpose.cpp  legpose.h
backup/imu_node_under/src/: jake_imu_node_under.cpp
backup/leg_pose/: CMakeLists.txt  package.xml
backup/leg_pose/msg/: legPose.msg
backup/param/: imu_car.yaml  imu_human_under.yaml  proxi_single.yaml
backup/single_imu/: CMakeLists.txt
backup/src/: single_imu.cpp
bas/: _setup_util.py  setup.sh
bas/lib/imu_node/: mpu_node
bas/lib/pkgconfig/: imu_node.pc  imu_node_under.pc  leg_pose.pc
bias/: 6a.txt  9a.txt  9a.txt~  9b.txt  9b.txt~  9c.txt  9d.txt  9e.txt  9f.txt  9t.txt
calibration/IMU_Cal/Calibrate/: BBB_I2C.h  CMakeLists.txt  MPU9150.cpp  butterworth_util.h
calibration/MAG_Cal/Calibrate/: CMakeLists.txt  MPU9150.cpp  main.cpp  quaternion_util.h
calibration/files/: raw_9f.txt
capture_legs/: CMakeLists.txt  package.xml
capture_legs/src/: capture_legs.cpp  proxi_tau.cpp
config_files/: optimization.help  tau_measure_2014-08-14_10-15.bag  tau_measure_2014-08-14_10-18.bag  tau_measure_2014-08-14_10-22.rosparam.yaml  tau_measure_2014-08-14_10-31.bag  tau_measure_2014-08-14_10-31.rosparam.yaml
config_files/bias/: 6a.txt  6b.txt  9a.txt  9c.txt  9d.txt~  9e.txt  9e.txt~  9f.txt~
config_files/calibration/files/: raw_9a.txt  raw_9b.txt  raw_9c.txt  raw_9d.txt  raw_9t.txt
config_files/data/: human_data_measurements.yaml  rosbag.sh
config_files/param/: full_body.yaml  full_body.yaml~  imu_human.yaml~  imu_param_under.yaml~  legs_full.yaml  legs_under.yaml  prosthetic.yaml  prosthetic.yaml~  single.yaml
data/: rosbag.sh
devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
devel/include/leg_pose/: legPose.h
devel/include/tau_under/: tau_under_msg.h
devel/lib/imu_node/: mpu_node
devel/lib/leg_pose/: pose_node
imu_common/: CMakeLists.txt  package.xml
imu_common/include/: BBB_I2C.h  EKF.h  EKF.hpp  MPU9150.h  ambcap.h  ambcap_EKF.h  ambcap_pros.h  ambcap_proxi.h  butterworth_util.h  common_assert.hpp  estimator.hpp  limits.hpp  pca9547.h  quaternion_util.h  yei_EKF.h  yei_core.h  yei_sensor.h
imu_common/include/imu_common/: EKF.hpp  estimator.hpp  estimator_shm.hpp
imu_common/mathematica/: fvec.cc  fvec.hh  model.nb
imu_common/mathematica/mathematica_util/: AmberShared.m  ExtraUtil.m  Linearize.m  README.yaml  ToCpp.m  ToMatlab.m  expressions.tpl.cpp  expressions.tpl.gtest.cpp  expressions.tpl.hpp  expressions.tpl.mex.cpp
imu_common/mathematica/mathematica_util/templates/: dynamics.mcc  mex_inv_matrix.mcc  mex_matrix.mcc
imu_common/mathematica/template/: template.cc  template.hh
imu_common/mathematica/utils/: AmberCpp.m  AmberShared.m  CseOptimization.m  ToCpp.m  ToMatlab.m
imu_common/msg/: imu.msg  imu.msg~  yei_msg.msg
imu_common/py/: threespace_api.py
imu_common/share/: sensor_config.yaml
imu_common/src/: BBB_I2C.cpp  EKF.cpp  MPU9150.cpp  ambcap.cpp  ambcap_EKF.cpp  ambcap_pros.cpp  ambcap_proxi.cpp  estimator.cpp  node.cpp  pca9547.cpp  quaternion_util.cpp  test.cpp  test_shm_collect.cpp  yei_EKF.cpp  yei_core.cpp  yei_sensor.cpp
param/: full_body.yaml  imu_human.yaml  imu_human_under.yaml  imu_param_under.yaml  proxi_single.yaml  single.yaml  tau_under.yaml
proxi_subs/: CMakeLists.txt  package.xml
proxi_subs/include/: proxi_subs.h
proxi_subs/src/: proxi_subs.cpp
src/beginner_tutorials/: package.xml
src/capture_legs/: CMakeLists.txt
src/imu_common/: CMakeLists.txt
src/imu_common/include/: MPU9150.h  ambcap.h  butterworth_util.h  limits.hpp  pca9547.h
src/imu_common/msg/: imu.msg
src/imu_common/src/: BBB_I2C.cpp  MPU9150.cpp  ambcap.cpp  pca9547.cpp  quaternion_util.cpp
src/imu_human_under/: CMakeLists.txt
src/imu_human_under/src/: imu_human_under.cpp
src/imu_node/: CMakeLists.txt  imu_param.yaml
src/imu_node_under/: CMakeLists.txt  bias.txt  imu_param_under.yaml
src/leg_pose/: CMakeLists.txt
src/single_imu/: CMakeLists.txt  package.xml
src/tau_under/: CMakeLists.txt
src/tau_under/include/: butterworth_util.h
src/tau_under/msg/: tau_under_msg.msg
src/tau_under/src/: tau_under.cpp
yei/: CMakeLists.txt  package.xml
yei/doc/Serial Examples C 2.0/: batch_command_example.c  demonstration_of_filter_modes_streaming.c  get_corrected_data.c  get_filt_tared_Quat.c  get_filt_tared_Quat_over_wireless.c  multi_wireless_sensor_example.c  response_header_example.c  set_led_color.c  set_led_color_over_wireless.c  streaming_example.c  streaming_example_over_wireless.c  yei_threespace_basic_utils.h
yei/doc/ThreeSpace_API_C_2.0.6.1 Src/: ThreeSpace_API.rc  license.txt
yei/doc/ThreeSpace_API_C_2.0.6.1 Src/codeblocks/: ThreeSpace_API_2.cbp  ThreeSpace_API_2.depend
yei/doc/ThreeSpace_API_C_2.0.6.1 Src/codeblocks/doxygen/: doxyfile
yei/doc/ThreeSpace_API_C_2.0.6.1 Src/examples/: creating_class_instances.cpp  getting_information.cpp  getting_information_asynchronously.cpp  getting_information_wireless.cpp  pairing_wireless_devices.cpp  setting_data.cpp
yei/doc/ThreeSpace_API_C_2.0.6.1 Src/include/: yei_enum_ports.h  yei_threespace_api.h  yei_threespace_core.h
yei/doc/ThreeSpace_API_C_2.0.6.1 Src/src/: main.c  yei_enum_ports.c  yei_threespace_api.c  yei_threespace_core.c
yei/doc/ThreeSpace_API_C_2.0.6.1 Src/visual_studio/ThreeSpace_API_2/: ThreeSpace_API_2.sln
yei/doc/ThreeSpace_API_C_2.0.6.1 Src/visual_studio/ThreeSpace_API_2/Test_API/: Test_API.vcxproj  Test_API.vcxproj.filters
yei/doc/ThreeSpace_API_C_2.0.6.1 Src/visual_studio/ThreeSpace_API_2/ThreeSpace_API/: ThreeSpace_API.vcxproj  ThreeSpace_API.vcxproj.filters
yei/include/: yei_commands.hpp  yei_threespace.hpp
yei/include/yei/: yei_threespace.hpp
yei/msg/: yei_msg.msg
yei/src/: test.cpp  yei_threespace.cpp
yei_sensor/: CMakeLists.txt  package.xml  setup.py
yei_sensor/include/: readme.txt  yei_driver.h  yei_wrapper.h
yei_sensor/src/: threespace_api.py  threespace_utils.py  yei_driver.cpp  yei_sensor.py  yei_wrapper.cpp  yei_wrapper.cpp.autosave
(+54 files in other folders)
