<?xml version="1.0"?>
<package>
  <name>imu_common</name>
  <version>0.0.0</version>
  <description>A package for interacting with the YEI sensor on a UNIX system.</description>

  <maintainer email="jake.reher@gmail.com">jreher</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>yei</build_depend>
  <build_depend>yaml_eigen_utilities</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>yei</run_depend>
  <run_depend>yaml_eigen_utilities</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
  </export>

</package>
